// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SceneRuleTargetColorEditor should render as expected 1`] = `
<div>
  <div
    data-mocked="Grid"
    griddefinition="[{"colspan":9},{"colspan":3}]"
  >
    <div
      data-mocked="Input"
      disabled=""
      value="#000000"
    />
    <div
      data-testid="color-swatch"
      style="background-color: rgb(0, 0, 0); border-color: #000000; width: 100%; height: 30px; border-style: solid; border-width: 1px; cursor: pointer;"
    />
  </div>
</div>
`;

exports[`SceneRuleTargetColorEditor should toggle color picker on click 1`] = `
<div>
  <div
    data-mocked="Grid"
    griddefinition="[{"colspan":9},{"colspan":3}]"
  >
    <div
      data-mocked="Input"
      disabled=""
      value="#000000"
    />
    <div
      data-testid="color-swatch"
      style="background-color: rgb(0, 0, 0); border-color: #000000; width: 100%; height: 30px; border-style: solid; border-width: 1px; cursor: pointer;"
    />
    <div
      data-mocked="ColorPicker"
    >
      {"color":"#000000"}
    </div>
  </div>
</div>
`;
